<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_open_web_page"
        android:text="@string/button_open_web_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/button_open_contacts"
        android:text="@string/button_open_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />
    <Button
        android:id="@+id/button_open_dialer"
        android:text="@string/button_open_dialer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/button_search_google"
        android:text="@string/button_search_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/button_voice_command"
        android:text="@string/button_voice_command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>

</LinearLayout>
